--- a/index_files/stylesheet.css
+++ b/index_files/stylesheet.css
@@ -424,7 +424,8 @@ td
 	border-bottom:none;
 	border-left:.5pt solid black;
 	background:yellow;
-	mso-pattern:yellow none;}
+	mso-pattern:yellow none;
+	text-decoration:none;}
 .xl97
 	{mso-style-parent:style0;
 	color:windowtext;
