--- a/style.css
+++ b/style.css
@@ -51,3 +51,7 @@ h1 {
 .dataTables_filter input,label {
     color: #fff;
 }
+
+.dataTables_wrapper .dataTables_length select{
+    background-color: #1a1a1a;
+}
