--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ label {
 }
 
 .dataTables_filter {
-    margin-bottom: 10px;
+    margin-bottom: 0.6%;
 }
 
 .dataTables_wrapper .dataTables_length select {
