--- a/style.css
+++ b/style.css
@@ -43,16 +43,27 @@ h1 {
     color: #fff;
 }
 
-#scroll-down-button {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
+.scroll-button {
     background-color: #0078d7;
     color: #000;
     padding: 10px;
     cursor: pointer;
-    border: none;
-    border-radius: 20px;
+    margin: 0.1%;
+    border-radius: 15px;
+}
+
+#bottom-right {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    margin: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+#bottom-right a {
+    margin: 3px;
 }
 
 .dataTables_filter input,
