--- a/style.css
+++ b/style.css
@@ -11,6 +11,16 @@ table {
     color: #fff;
 }
 
+table.dataTable span.highlight {
+    background-color: blue;
+    border-radius: 0.28571429rem;
+}
+
+table.dataTable span.column_highlight {
+    background-color: blue;
+    border-radius: 0.28571429rem;
+}
+
 a {
     color: white;
     background-color: transparent;
